<resources>
    <string name="app_name">Agendamento Horarios</string>
    <string name="loremIpsumLogin">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="LoremIpumAuthorLogin">- Enim risus</string>
    <string name="entrar">Entrar</string>
    <string name="entrarTitle">Entrar</string>
    <string name="senhaButton">Senha</string>
    <string name="emailInput">Email</string>
    <string name="nome_cliente">Nome Cliente</string>
    <string name="descri_o_servi_o">Descrição Serviço</string>
    <string name="observa_o">Observação</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="editar">Editar</string>
</resources>