<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAtendimentoAcitivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">


        <EditText
            android:id="@+id/obervacao"
            style="@style/EditTextInput"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valorServico"
            android:hint="@string/observa_o" />

        <EditText
            android:id="@+id/valorServico"
            style="@style/EditTextInput"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/obervacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descricaoServico"
            android:hint="@string/valor" />

        <EditText
            android:id="@+id/descricaoServico"
            style="@style/EditTextInput"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="textPersonName|text"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/valorServico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title2"
            android:hint="@string/descri_o_servi_o" />


        <TextView
            android:id="@+id/title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Serviço"
            android:textColor="@color/nude_2"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/descricaoServico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nomeText"
            style="@style/EditTextInput"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1"
            app:layout_constraintVertical_bias="0.49"
            android:hint="@string/nome_cliente" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Cliente"
            android:textColor="@color/nude_2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/title3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Agendamento"
            android:textColor="@color/nude_2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/diaText"
            style="@style/EditTextInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date"
            android:onClick="openDatePicker"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/horaText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title3" />

        <EditText
            android:id="@+id/horaText"
            style="@style/EditTextInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date"
            android:onClick="openHourPicker"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diaText"
            app:layout_constraintTop_toBottomOf="@+id/title3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:layout_editor_absoluteX="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/ButtonEntrar"
            android:text="Salvar"
            app:backgroundTint="@color/nude_3"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>